appId: com.stevencaoernox.cfuadminapplication
---
- tapOn: "Skills Maintenance"
- assertVisible: "Skills Maintenance"
- tapOn: "Drill 1 - Pre-incident Planning"
- assertNotVisible: "Please wait..."
- tapOn: "Open Instructions"
- assertNotVisible: "Please wait..."
- tapOn:
    leftOf: "Drill 1 - Pre-incident Planning"
- tapOn: "Begin group discussion"
- assertNotVisible: "Please wait..."
- assertVisible: "1 of 5"
- tapOn: "See Answer"
- tapOn: "Next Card"
- assertVisible: "2 of 5"
- tapOn: "See Answer"
- tapOn: "Next Card"
- assertVisible: "3 of 5"
- tapOn: "See Answer"
- tapOn: "Next Card"
- assertVisible: "4 of 5"
- tapOn: "See Answer"
- tapOn: "Next Card"
- assertVisible: "5 of 5"
- tapOn: "See Answer"
- tapOn: "Next Card"
- assertVisible: "End group discussion"
- tapOn: "Open Instructions"
- assertNotVisible: "Please wait..."
- tapOn:
    leftOf: "Drill 1 - Pre-incident Planning"
- tapOn: "End group discussion"
- tapOn:
    leftOf: "Skills Maintenance"